# ContextBridge

./: README.md  proposal.md  pyproject.toml
docs/0.Proposal/: proposal-en.md  proposal.md
docs/1. Context/: resources.md
docs/1. Context/v1/: ab-test-comparison.md
docs/1.Context/: context architecture.md
docs/1.Context/v1/: ab-test-example.md  sample-retrieved-data.json
docs/2.AI APP Patterns/: tech-selection-analysis.md
docs/3. RAG/3.1 source/: 3.1.0 resources.md  3.1.2 data-source-and-embedding-management.md
docs/3. RAG/3.2 AWS/: 3.2.0 aws-rag-implementation-plan.md  3.2.1 model-selection-strategy.md  aws-vector-database-options.md
docs/3. RAG/3.3 embedding model/: 3.3.0 embedding-model-selection.md
docs/3. RAG/3.4 vector database/: 3.4.1 vector-database-decision-for-contextbridge.md
docs/3. RAG/3.6 parse/: 3.6.0 aws-parser-deployment-with-llamaindex.md  3.6.1 parser-code-structure.md  3.6.2 parser-local-development-runtime.md  3.6.3 pdf-parsing.md
docs/3.RAG/: aws-rag-implementation-plan.md  rag-implementation-plan.md  source-registry.md
docs/3.RAG/3.1 source/: 3.1.1 knowledge-base-structure.md
infra/: README.md
infra/docs/: 01-terraform-environment-directory-planning.md  02-sandbox-redeployment-notes.md
src/contextbridge_parser/parsers/: README.md
src/contextbridge_parser/parsers/pdf/: gesb_saff.py  gesb_saff_parser_logic.md  table_parsing_strategy.md
src/contextbridge_parser/parsers/pdf/common/: pages.py  sections.py  text.py
src/contextbridge_parser/parsers/scripts/: parse_gesb_saff_pdf.py
(+7 files in other folders)
